# upd-new

./: .dockerignore  .eslintrc.json  .gitignore  .nxignore  ACCESSIBILITY.md  CHANGELOG.md  README.md  angular.json  english-french-manual-verification.txt  log.json  migrations.json  nx.json  package-lock.json  package.json  psi_accessibility_app.py  reddit.txt  release-please-config.json  searchterms-noMatch-2023-01-20.json  searchterms-noMatch-2023-01-22.json  searchterms-noMatch-2023-01-23.json  stopwords_en.json  stopwords_fr.json  test-social-listening.html  test.json  tsconfig.base.json  tsconfig.bun.json  tsconfig.json  urls-update-ops.json
.devcontainer/: Dockerfile  aws-sso-init.sh  devcontainer.json  docker-compose.yml  get-duckdb-node-binding.sh  post-create.sh
docker/: docker-compose.dev.local.yml  docker-compose.local.yml  (+1 more)
python/mongo-parquet/: .dockerignore  .gitignore  pyproject.toml
python/mongo-parquet/src/mongo_parquet/: __init__.py  __main__.py  io.py  mongo.py  sampling.py  storage.py  utils.py
python/mongo-parquet/src/mongo_parquet/schemas/: __init__.py  aa_item_ids.py  aa_searchterms.py  activity_map.py  annotations.py  calldrivers.py  custom_reports_registry.py  feedback.py  gc_tasks_mappings.py  gc_tss.py  gsc_searchterms.py  lib.py  overall_aa_searchterms_en.py  overall_aa_searchterms_fr.py  overall_gsc_searchterms.py  overall_metrics.py  page_metrics.py  pages.py  pages_list.py  projects.py  readability.py  reports.py  search_assessment.py  tasks.py  urls.py  utils.py  ux_tests.py
python/mongo-parquet/src/mongo_parquet/views/: __init__.py  daterange_utils.py  daterange_utils_test.py  metrics_common.py  utils.py  view_pages.py  view_service.py  view_tasks.py
python/update-pages/: .gitignore  pyproject.toml
python/update-pages/src/update_pages/: __main__.py
(+1246 files in other folders)
