[project]
name = "mongo_parquet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "polars==1.31.0",
  "pydantic>=2.10.6",
  "pymongo>=4.10.1",
  "pymongoarrow==1.9.0",
  "python-dotenv>=1.0.1",
  "zstandard>=0.23.0",
  "adlfs>=2024.12.0",
  "s3fs>=2025.3.2",
  "pyarrow>=20.0.0",
  "duckdb>=1.3.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyarrow-stubs>=19.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mongo_parquet"]

[tool.pyright]
venvPath = "."
venv = ".venv"
